--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "Pages",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "cmd/pages/pages.go",
+            "cwd": "."
+        },
 
         {
             "name": "Server",
