--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
    "editor.fontSize": 14,
-   "go.languageServerFlags": [
-      "-mcp.listen=localhost:6969"
-   ],
+   // "go.languageServerFlags": [
+   //    "-mcp.listen=localhost:6969"
+   // ],
    "geminicodeassist.inlineSuggestions.nextEditPredictions": false,
    "geminicodeassist.languages": [
       "go"
